cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_dynamic_playlist_import_success@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: stdout
---
Daemon response:
Dynamic Playlists:
	dynamic:{id}: "Dynamic Playlist 0" (artist CONTAINS "Artist 0")
