cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_library_command_case_07@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
LibraryHealthResponse {
    artists: 1,
    albums: 1,
    songs: 2,
    unanalyzed_songs: Some(
        0,
    ),
    playlists: 2,
    collections: 1,
    dynamic_playlists: 1,
    orphaned_artists: 0,
    orphaned_albums: 0,
    orphaned_playlists: 1,
    orphaned_collections: 0,
}
