cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_library_command_case_10@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Albums:
	album:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Album" (by: One("Test Artist"))
