cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_library_command_case_15@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Playlists:
	playlist:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Playlist" (1 songs, 180s)
	playlist:03J1K5B6RJ84WJXCWYJ5WNE12E: "Another Playlist" (0 songs, 0ns)
