cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_library_command_case_20@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    Artist {
        id: RecordId {
            tb: "artist",
            id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
        },
        name: "Test Artist",
        runtime: Duration {
            seconds: 180,
            nanos: 0,
        },
        album_count: 1,
        song_count: 1,
    },
)
